chore: Updated code using new OpenAPI specification
